--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "opencode-supermemory",
+  "name": "opencode-viking-memory",
   "version": "0.1.5",
-  "description": "OpenCode plugin that gives coding agents persistent memory using Supermemory",
+  "description": "OpenCode plugin that gives coding agents persistent memory using VikingMemory",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "opencode-supermemory": "./dist/cli.js"
+    "opencode-viking-memory": "./dist/cli.js"
   },
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node && bun build ./src/cli.ts --outfile ./dist/cli.js --target node && tsc --emitDeclarationOnly",
@@ -16,20 +16,20 @@
   "keywords": [
     "opencode",
     "plugin",
-    "supermemory",
+    "viking_memory",
     "memory",
     "ai",
     "coding-agent"
   ],
-  "author": "Supermemory",
+  "author": "Volcengine VikingMemory",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/supermemoryai/opencode-supermemory"
+    "url": "https://github.com/volcengine/opencode-viking-memory"
   },
   "dependencies": {
     "@opencode-ai/plugin": "^1.0.162",
-    "supermemory": "^4.0.0"
+    "@volcengine/viking-memory": "^1.0.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
